--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/CommandPalette.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/CommandPalette.axaml
@@ -4,18 +4,18 @@
     mc:Ignorable="d"
     x:Class="FileTime.GuiApp.Views.CommandPalette"
     x:CompileBindings="True"
-    xmlns:vm="clr-namespace:FileTime.App.CommandPalette.ViewModels;assembly=FileTime.App.CommandPalette.Abstractions"
     xmlns="https://github.com/avaloniaui"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:FileTime.App.CommandPalette.ViewModels;assembly=FileTime.App.CommandPalette.Abstractions"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <UserControl.Styles>
         <StyleInclude Source="avares://FileTime.GuiApp/Resources/Styles.axaml" />
     </UserControl.Styles>
-    <Grid RowDefinitions="Auto,*"
-          x:DataType="vm:ICommandPaletteViewModel">
+    <Grid RowDefinitions="Auto,*" x:DataType="vm:ICommandPaletteViewModel">
         <TextBox
             KeyDown="Search_OnKeyDown"
+            KeyUp="Search_OnKeyUp"
             Text="{Binding SearchText, Mode=TwoWay}"
             x:Name="SearchTextBox" />
         <ListBox
@@ -25,9 +25,12 @@
             SelectedItem="{Binding SelectedItem}">
             <ListBox.ItemTemplate>
                 <DataTemplate x:DataType="vm:ICommandPaletteEntryViewModel">
-                    <Grid Margin="5" ColumnDefinitions="*, Auto">
+                    <Grid ColumnDefinitions="*, Auto" Margin="5">
                         <TextBlock Text="{Binding Title}" />
-                        <TextBlock Grid.Column="1" Text="{Binding Shortcuts}" Margin="0,0,10,0" />
+                        <TextBlock
+                            Grid.Column="1"
+                            Margin="0,0,10,0"
+                            Text="{Binding Shortcuts}" />
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
