--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Converters.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Converters.axaml
@@ -26,18 +26,13 @@
                 SelectedBrush="{StaticResource SelectedItemBackgroundBrush}"
                 x:Key="ItemViewModeToBackgroundConverter" />
             <converters:NamePartShrinkerConverter x:Key="NamePartShrinkerConverter" />
-            <converters:ItemViewModelIsAttributeTypeConverter x:Key="ItemViewModelIsAttributeTypeConverter" />
-            <converters:ItemViewModelIsAttributeTypeConverter Invert="true"
-                                                              x:Key="ItemViewModelIsNotAttributeTypeConverter" />
             <converters:GetFileExtensionConverter x:Key="GetFileExtensionConverter" />
             <converters:FormatSizeConverter x:Key="FormatSizeConverter" />
             <converters:DateTimeConverter x:Key="DateTimeConverter" />
             <converters:SplitStringConverter x:Key="SplitStringConverter" />
             <converters:CompareConverter x:Key="EqualsConverter" />
-            <converters:CompareConverter ComparisonCondition="{x:Static converters:ComparisonCondition.NotEqual}"
-                                         x:Key="NotEqualsConverter" />
-            <converters:CompareConverter ComparisonCondition="{x:Static converters:ComparisonCondition.GreaterThan}"
-                                         x:Key="GreaterThanConverter" />
+            <converters:CompareConverter ComparisonCondition="{x:Static converters:ComparisonCondition.NotEqual}" x:Key="NotEqualsConverter" />
+            <converters:CompareConverter ComparisonCondition="{x:Static converters:ComparisonCondition.GreaterThan}" x:Key="GreaterThanConverter" />
             <converters:ExceptionToStringConverter x:Key="ExceptionToStringConverter" />
             <converters:CommandToCommandNameConverter x:Key="CommandToCommandNameConverter" />
             <converters:ItemToImageConverter x:Key="ItemToImageConverter" />
@@ -47,6 +42,16 @@
                 x:Key="PathPreformatter" />
             <converters:ContextMenuGenerator x:Key="ContextMenuGenerator" />
             <converters:TextDecorationConverter x:Key="TextDecorationConverter" />
+            <converters:ItemSizeToSizeConverter x:Key="ItemSizeToSizeConverter" />
+            <converters:ItemSizeToBrushConverter x:Key="ItemSizeToBrushConverter" />
+            <converters:ItemSizeToBrushConverter
+                HueDiff="90"
+                Lightness="0.25"
+                x:Key="ItemSizeToForegroundBrushConverter" />
+            <converters:IsTypeConverter x:Key="IsTypeConverter" />
+            <converters:IsTypeConverter Invert="True" x:Key="IsNotTypeConverter" />
+
+            <converters:DebugConverter x:Key="DebugConverter" />
         </ResourceDictionary>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
